Implementation of a password change route
